--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>character inspector - what to know before you roll</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous"/>
     <link rel="stylesheet" href="main.css" />
 </head>
-<body class="container">
+<body class="container-fluid">
     <div class="row nogutter">
         <div class="col-md-3">
+            <button id="homebtn" type="button" onclick="$GI.handleHome()">Home</button>
             <button id="racesbtn" type="button" onclick="$GI.handleRaces()">Races</button>
             <button id="abilitiesbtn" type="button" onclick="$GI.handleAbilityScores()">Ability Scores</button>
             <!--<button type="button" id="classesbtn">Classes</button>-->
