--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="main.css" />
 </head>
 <body class="container-fluid">
+    <header class="row nogutter">
+            <h1>What to Know Before you Roll</h1>
+    </header>
     <div class="row nogutter">
         <div class="col-md-3">
             <button id="homebtn" type="button" onclick="$GI.handleHome()">Home</button>
@@ -17,13 +20,14 @@
             <button type="button" id="skillsbtn" onclick="$GI.handleSkills()">Skills</button>
             <ul id="list"></ul>
         </div>
-        
         <div id="details" class="col-md-6 col-md-offset-2"></div>
+        <div class="overlay"><i class="fas fa-spinner fa-spin"></i></div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"
             integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
             crossorigin="anonymous"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
